--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>SeatYoSelf</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-  <h1>Seat YoSelf</h1>
-  <p>Welcome, </p>
-<%= yield %>
-<footer>
-  <p>Contact Us | Placeholder</p>
-</footer>
+  <head>
+    <title>SeatYoSelf</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <h1>Seat YoSelf</h1>
+    <p> <% if current_user %>
+      Welcome, <%= current_user.first_name %> <%= link_to image_tag("/assets/images/rightarrow11.png"), session_path("current"), :method => :delete %>
+    <% end %>
+   </p>
+  <%= yield %>
+  <footer>
+    <p>Contact Us | Placeholder</p>
+  </footer>
 
-</body>
+  </body>
 </html>
