Log in functioning

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,13 @@
   <body>
     <h1>Seat YoSelf</h1>
     <p> <% if current_user %>
-      Welcome, <%= current_user.first_name %> <%= link_to image_tag("/assets/images/rightarrow11.png"), session_path("current"), :method => :delete %>
+      Welcome, <%= current_user.first_name %> <%= link_to image_tag("/images/rightarrow11.png"), session_path("current"), :method => :delete %>
     <% end %>
    </p>
   <%= yield %>
+
+
+
   <footer>
     <p>Contact Us | Placeholder</p>
   </footer>
