finish styling login page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,13 @@
   </head>
   <body>
   <div class = "page_wrapper">
-
+  <div id="header">
     <h1>Seat YoSelf <img src="/images/knife39.png" alt="logo" id="logo"/></h1>
       <p id = "current_user"> <% if current_user %>
       Welcome, <%= current_user.first_name %> <%= link_to image_tag("/images/rightarrow11.png"), session_path("current"), :method => :delete %>
       <% end %>
      </p>
+  </div><!--end header-->
 
 
   <div id="navigation">
