--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,182 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+html{
+  box-sizing: border-box;
+	font-size: 100%;
+  background-image: url("background.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+}
+*,*:before, *:after{
+	box-sizing: inherit;
+}
+.page-wrapper{
+	width: 1024px;
+	margin: 0 auto;
+}
+
+#header{
+  top:0;
+  left:0;
+  right:0;
+}
+
+#header h1{
+  font-family: 'Lobster', cursive;
+  color: #363636;
+  font-size: 2.5rem;
+  padding-left: 1.5%;
+  margin-top: 0.5%;
+}
+
+#header img{
+  width: 5%;
+  height: 2.5rem;
+  margin-top: 1%;
+}
+
+#nav_bar{
+  background-color: #363636;
+  left:0;
+  right:0;
+  position: fixed;
+  margin-top: -15px;
+  z-index: 50;
+}
+
+#nav_bar ul{
+  list-style: none;
+  font-size: 1rem;
+
+}
+
+#nav_bar li{
+  display: inline-block;
+}
+
+#nav_bar a, #nav_bar a:visited{
+	text-decoration: none;
+	font-family: 'Raleway', cursive;
+	color: white;
+	font-size: 1.2rem;
+}
+
+#nav_bar a:hover{
+	color: #ef2828;
+}
+
+#footer{
+  background-color: #636363;
+  position: absolute;
+	left: 0;
+	right: 0;
+
+}
+
+#connect{
+  padding-left: 1.5%;
+  font-size: 1rem;
+  font-family:'Raleway', cursive;
+  color: white;
+  padding-left: 3%;
+
+}
+
+#copyright{
+  float: right;
+  padding-right: 2%;
+  font-size: 0.7rem;
+  font-family:'Raleway', cursive;
+  color: white;
+}
+
+.socialMedia{
+  background-color: #636363;
+  outline: none;
+  border: none;
+}
+
+.socialBtn{
+	width: 40%;
+}
+
+
+
+ h2{
+  font-family: 'Lobster', cursive;
+  color: #ef2828;
+  font-size: 2.5rem;
+  padding-top: 5%;
+  text-align: center;
+
+}
+
+#login_form{
+  margin-left: 30%;
+  padding-bottom: 2%;
+  padding-top: 2%;
+  background-color: white;
+  opacity: 0.8;
+  width: 40%;
+}
+.field{
+  font-size: 1.5rem;
+  font-family:'Raleway', cursive;
+  color: #363636;
+  padding-bottom: 3%;
+  text-align: center;
+
+ }
+
+ .text_field{
+   width:60%;
+   font-size: 1.2rem;
+
+ }
+
+ .submit_class{
+   width: 50%;
+   font-family:'Raleway', cursive;
+   margin-left: 25%;
+   margin-top: 3%;
+   background-color:#ef2828;
+   border: none;
+   font-size: 1.5rem;
+   color: white;
+
+}
+
+#alert{
+  font-size: 1rem;
+  font-family:'Raleway', cursive;
+  color: #ef2828;
+
+}
+
+#sign_up{
+  font-size: 1.5rem;
+  font-family:'Raleway', cursive;
+  color: #363636;
+  padding-left: 7%;
+  padding-top: 3%;
+}
+
+#sign_up a, #sign_up a:visited{
+  color: #ef2828;
+  text-decoration: none;
+}
+
+#sign_up a:hover{
+  color: #363636;
+}
+
+#current_user{
+  font-size: 1.2rem;
+  font-family:'Raleway', cursive;
+  color: #363636;
+  float: right;
+  margin-top: -75px;
+
+}
+
+#current_user a{
+  width: 50%;
+}
