--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,4 +1,4 @@
 <h2>Show all Reservations</h2>
-<% @reservations.each do |r| %>
+<% @restaurant.reservations.each do |r| %>
 <p>  <%= r.time_slot %> <%= r.party_size %></p>
 <% end %>
