--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%= current_user.first_name %>'s Reservation:</h2>
+<h2><%= current_user.first_name %>'s <%= @reservation.restaurant.name %> Reservation:</h2>
 <ul>
   <li> Number of People: <%= @reservation.party_size %></li>
   <li> Reservation Time: <%= @reservation.time_slot %></li>
