--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,5 +1,7 @@
+<div id ="show_reso">
 <h2><%= current_user.first_name %>'s <%= @reservation.restaurant.name %> Reservation:</h2>
 <ul>
   <li> Number of People: <%= @reservation.party_size %></li>
   <li> Reservation Time: <%= @reservation.time_slot %></li>
 </ul>
+</div>
