--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
-<h3>Sign Up</h3>
-
+<div style="background:url('/images/restaurant.jpg'); padding-bottom: 5%;">
+<h2>Sign Up</h2>
+<div id="sign_up_form">
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -13,15 +14,15 @@
   <% end %>
   <div class="field">
     <%= f.label :first_name %> <br>
-    <%= f.text_field :first_name %>
+    <%= f.text_field :first_name, :class => 'text_field' %>
   </div>
   <div class="field">
     <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
+    <%= f.text_field :last_name, :class => 'text_field' %>
   </div>
   <div class="field">
     <%= f.label :email %><br/>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, :class => 'text_field' %>
   </div>
   <div class="field">
     <%= f.label :password %><br/>
@@ -33,3 +34,5 @@
   </div>
   <div class="actions"><%= f.submit %></div>
 <% end %>
+</div>
+</div>
